fix: z-index err

--- a/src/views/ProfilePage.module.scss
+++ b/src/views/ProfilePage.module.scss
@@ -59,6 +59,7 @@
 	bottom: 0;
 	right: 0;
 	top: 0;
+	z-index: -10;
 }
 
 .profileContainer::before {
@@ -169,6 +170,7 @@
 	.profileContent {
 		padding-left: 8.1rem;
 		width: 53.4rem;
+		z-index: 2000;
 
 		h1 {
 			text-align: center;
